--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Vu Minh An is a professional data engineer based in Hanoi, Vietnam.">
     <meta property="og:title" content="Vu Minh An">
     <meta property="og:description" content="Vu Minh An is a professional data engineer based in Hanoi, Vietnam.">
-    <meta property="og:url" content="https://mxb.dev/">
+    <meta property="og:url" content="https://vuminhan.id.vn/">
     <meta property="og:image" content="images/avatar2.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="author" content="Vu Minh An">
@@ -25,7 +25,7 @@
     <meta name="twitter:site" content="@mxbck">
     <meta name="twitter:creator" content="@mxbck">
     <meta property="fb:app_id" content="127677017332959">
-    <link rel="canonical" href="https://mxb.dev/">
+    <link rel="canonical" href="https://vuminhan.id.vn/">
     <script type="application/ld+json">{
         "name":"Vu Minh An",
         "description":"Vu Minh An is a professional data engineer based in Hanoi, Vietnam.",
@@ -50,13 +50,13 @@
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="theme-color" content="#1a1a1a">
-    <link type="application/atom+xml" rel="alternate" href="https://mxb.dev/feed.xml" title="Vu Minh An">
-    <link type="application/atom+xml" rel="alternate" href="https://mxb.dev/notes/feed.xml" title="Vu Minh An | Notes">
+    <link type="application/atom+xml" rel="alternate" href="https://vuminhan.id.vn/feed.xml" title="Vu Minh An">
+    <link type="application/atom+xml" rel="alternate" href="https://vuminhan.id.vn/notes/feed.xml" title="Vu Minh An | Notes">
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
     <meta name="monetization" content="$ilp.uphold.com/7qZLaNKjDa87">
-    <link rel="pingback" href="https://webmention.io/mxb.dev/xmlrpc">
-    <link rel="webmention" href="https://webmention.io/mxb.dev/webmention">
+    <link rel="pingback" href="https://webmention.io/vuminhan.id.vn/xmlrpc">
+    <link rel="webmention" href="https://webmention.io/vuminhan.id.vn/webmention">
     <meta name="view-transition" content="same-origin">
     <script>(function () {
             var theme = localStorage.getItem('theme');
